examples/errors/typo-correct.tex
\documentclass{article}
\begin{document}
Das Kommando \textbf{fett}.
\end{document}
